# painel_projeto

./: CMakeLists.txt  README.md  main.cpp
include/: matematica.h
src/: matematica.cpp
test/: matematic_test.cpp
